--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "typed.js": "^2.0.16"
   }
 }
